--- a/prueba.html
+++ b/prueba.html
@@ -12,7 +12,7 @@
   </header>
   <body>
     <h1>Mí primera página</h1>
-    <h2>En vivo</h2>
+    <h2>En vivoo</h2>
     <h3>Prueba</h3>
   </body>
   <footer>
