--- a/prueba.html
+++ b/prueba.html
@@ -2,18 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Ricardo López Reyero</title>
+    <title>Blog - Ricardo López</title>
     <link rel="stylesheet" href="estilos.css">
   </head>
-  <header>
-    <menu>
-      Menu
-    </menu>
-  </header>
+  
   <body>
-    <h1>Mí primera página</h1>
-    <h2>En vivoo</h2>
-    <h3>Prueba</h3>
+    <div id="container">
+      <div id="post">
+        <h1>Este es el título
+          atractivo e interesante del
+          post.
+        </h1>
+        <p>y este texto pertene al parrafo del post 
+          que esta perfectamente escrito de una manera
+          muy singular
+        </p>
+      </div>
+    </div>
   </body>
   <footer>
   </footer>
