cambie la tipografia del blog

--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,11 @@
           que esta perfectamente escrito de una manera
           muy singular
         </p>
+        <p>
+          Este es un segundo parrafo del blog, 
+          espero que quede muy bien y se pueda 
+          hacer merge sin mucho problema
+        </p>
       </div>
     </div>
   </body>
