modifique color y agregue parrafo

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
       <div id="cabecera">
         Hyperblog
         <span id="tagline">
-          Tu blog de confianza
+          Tu blog de master
         </span>
       </div>
       <div id="post">
@@ -28,6 +28,10 @@
           espero que quede muy bien y se pueda 
           hacer merge sin mucho problema
         </p>
+        <p>
+          Suscribete y dale like
+        </p>
+
       </div>
     </div>
   </body>
