cambie el nombre de la página a master

--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Blog - Ricardo López</title>
+    <title>Blog - Master - Ricardo López</title>
     <link rel="stylesheet" href="estilos.css">
   </head>
   
