le agregue un numero en el titulo del blog

--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
         </span>
       </div>
       <div id="post">
-        <h1>Este es el título
+        <h1>Este es el título (1)
           atractivo e interesante del
           post.
         </h1>
