cambie al 3 en el html en la compu

--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
         </span>
       </div>
       <div id="post">
-        <h1>Este es el título (2 en web)
+        <h1>Este es el título (3 en escritorio)
           atractivo e interesante del
           post.
         </h1>
