simplificando las cosas aun mas

--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
         </span>
       </div>
       <div id="post">
-        <h1>Este es el título (modificando para ver el -am)
+        <h1>Este es el título (modificando para ver el -am otra vez)
           atractivo e interesante del
           post.
         </h1>
