--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
         </span>
       </div>
       <div id="post">
-        <h1>Este es el título (en Vstudio en escritorio)
+        <h1>Este es el título (en master simplificando las cosas)
           atractivo e interesante del
           post.
         </h1>
