--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
       <div id="cabecera">
         Hyperblog
         <span id="tagline">
-          Tu blog de master
+          Tu blog de masterrrr haciedo pruebas
         </span>
       </div>
       <div id="post">
